--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -18,6 +18,10 @@
       color: red;
     }
   }
+  .App-address {
+    text-align: center;
+    word-break: break-all;
+  }
   .App-container {
     .App-container-logos {
       display: flex;
