--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,6 +28,7 @@ body {
   background-color: #34c88a;
   font-size: 14px;
   border: none;
+  -webkit-appearance: none;
   @media all and (min-width: 768px) {
     padding: .75rem 1rem;
     font-size: 1rem;
