--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -17,6 +17,9 @@
     .App-error-text {
       color: red;
     }
+    .App-orange-text {
+      color: #ff876c;
+    }
   }
   .App-address {
     text-align: center;
